--- a/assets/css/template.css
+++ b/assets/css/template.css
@@ -46,3 +46,12 @@ body{
 	height: 100px;
 	background-color: #eee;
 }
+
+.produto{
+	width: 180px;
+	height: 230px;
+	background-color: #eee;
+	margin: 10px;
+	float: left;
+	text-align: center;
+}
