--- a/assets/css/template.css
+++ b/assets/css/template.css
@@ -1,10 +1,12 @@
 body{
 	margin: 0;
+	font-family: 'Trebuchet MS';
 }
 
 .topo{
-	height: 100px;
-	background-color: #eee;
+	height: 120px;
+	background-color: #fff;
+	text-align: center;
 }
 .menu{
 	height: 50px;
@@ -39,7 +41,6 @@ body{
 	width: 100%;
 	max-width: 800px;
 	min-height: 300px;
-	background-color: #ccc;
 	margin: auto;
 }
 .rodape{
@@ -48,10 +49,28 @@ body{
 }
 
 .produto{
-	width: 180px;
+	width: 176px;
 	height: 230px;
 	background-color: #eee;
 	margin: 10px;
 	float: left;
 	text-align: center;
+	border: 2px solid #fff;
+	border-radius: 3px;
+}
+.produto:hover{
+	border: 2px solid #ccc;
+}
+.produto_foto{
+	width: 300px;
+	height: 300px;
+	background-color: #eee;
+	margin-top: 20px;
+	margin-bottom: 20px;
+	float: left;
+}
+.produto_info{
+	float: left;
+	margin-left: 20px;
+	text-align: justify;
 }
